--- a/OfficeInstaller/OfficeInstaller.csproj
+++ b/OfficeInstaller/OfficeInstaller.csproj
@@ -83,6 +83,7 @@
     </ApplicationDefinition>
     <Compile Include="Controls\ClippingBorder.cs" />
     <Compile Include="Helpers\CommandRunner.cs" />
+    <Compile Include="Helpers\LangHelper.cs" />
     <Compile Include="Pages\ResultPageFail.xaml.cs">
       <DependentUpon>ResultPageFail.xaml</DependentUpon>
     </Compile>
@@ -118,6 +119,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\en-us.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\zh-cn.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Buttons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -139,6 +148,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\RadioButtons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Toggles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
