--- a/OfficeInstaller/OfficeInstaller.csproj
+++ b/OfficeInstaller/OfficeInstaller.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Helpers\CommandRunner.cs" />
     <Compile Include="Helpers\LangHelper.cs" />
     <Compile Include="Helpers\OSHelper.cs" />
+    <Compile Include="Pages\ResultPageActFail.xaml.cs">
+      <DependentUpon>ResultPageActFail.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ResultPageFail.xaml.cs">
       <DependentUpon>ResultPageFail.xaml</DependentUpon>
     </Compile>
@@ -108,6 +111,10 @@
     <Page Include="Pages\InstallPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ResultPageActFail.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\ResultPageFail.xaml">
       <Generator>MSBuild:Compile</Generator>
